src/stylesheets/style.scss
// import css rest
@import 'reset.scss';
//import fonts
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');

// media queries
$xs: 0;
$sm: 576px;
$md: 768px;
$lg: 992px;
$xl: 1200px;
$xxl: 1400px;

// removes blue highlight when you click elements from phone
.noSelect {
  -webkit-tap-highlight-color: transparent;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
.noSelect:focus {
  outline: none !important;
}

// color pallette
$background: #1D1D1D;
$background-dark: #181818;
$background-darker: #0F0F0F;
$text-white: #fff;
$text-gray: #747474;
$text-palceholder: #606060;
$white: #fff;
$transparent: #00000000;

* {
  box-sizing: border-box;
}

html, body {
  background-color: $background;
  color: $text-white;
  font-family: 'Inter', sans-serif;
  position: relative;
}
// font sizes for mobile
html, body, button {
  font-size: 1em;
}
input, textarea {
  font-size: inherit;
  font-family: inherit;
}
h1 {
  font-size: 2.5em;
  font-weight: bold;
  text-align: center;
}
h2 {
  font-size: 2em;
  font-weight: bold;
  text-align: center;
}
h3 {
  font-size: 1.2em;
}
a {
  color: $text-white;
}
a:visited {
  color: $text-gray;
}
p {
  line-height: 1.2em;
}

.navigation-menu {
  position: absolute;
  width: 100%;
  z-index: 20;

  .mobile-navigation-menu {
    position: relative;

    .header {
      #trigger{
        display: none;
      }
      .trigger:checked ~ .triggerLabel .hamburger span:first-child {
        //trigger is a sibling of .triggerLabel that has as direct child the parent element(&, which is hamburger) of the first-child span 
        transform: rotate(45deg);
        top: 8px;
      }
      .trigger:checked ~ .triggerLabel .hamburger span:last-child {
          transform: rotate(-45deg);
          top: -8px;
      }
      .trigger:checked ~ .triggerLabel .hamburger span:nth-child(2) {
        opacity: 0;
      }
      .trigger:checked ~ nav {
        top: 0;
        transition: top 0.3s ease-in-out;
      }

      .triggerLabel {
        display: block;
        position: relative;
        z-index: 1;
        cursor: pointer;
        height: 22px!important;
        width: 30px!important;
        box-sizing: border-box;
        margin: 20px;
        float: right;

        .hamburger {

          span {
            display: block;
            height: 3px;
            width: 30px;
            background: #fff;
            margin-bottom: 5px;
            position: relative;
            transition: transform 0.3s ease-in-out, top 0.3s ease-in-out, opacity 0.3s ease-in-out; // setting the transitions individually instead of using "all" gives better performance and uses less resources

          }
        }
      }

      nav {
        width: 100vw;
        display: flex;
        justify-content: center;
        text-align: center;
        position: relative;
        top: -270px;
        transition: top 0.3s ease-in-out;
        position: absolute; // it is absolutely position to mobile-navigation-menu
        background: linear-gradient(rgb(0, 0, 0), rgba(0, 0, 0, 0));
        padding: 40px;


        ul {
          li {
            list-style: none;
            font-size: 1.4em;
            padding: 20px 0;
            width: 50vw;
            text-align: center;

            &:not(:last-child) {
              border-bottom: 1px solid #fff;
            }
            a {
              color: #fff;
              text-decoration: none!important;
              text-align: center;
            }
          }
        }
      }
    }
  }

  .desktop-navigation-menu {
    
    .header {
      height: 200px;
      background: linear-gradient(rgb(0, 0, 0), rgba(0, 0, 0, 0));

      nav {
        ul {
          display: flex;
          justify-content: center;
          align-items: center;
          padding: 30px;
          gap: 200px;
          font-size: 1.4em;

          li {
            list-style: none;
            text-align: center;
            a {
              color: #fff;
              text-decoration: none;
              text-align: center;
            }
          }
        }
      }
    }
  }

  // media queries
  .desktop-navigation-menu {
    display: none;
  }
  @media (min-width: $xl) {
    .mobile-navigation-menu {
      display: none;
    }
    .desktop-navigation-menu {
      display: block;
    }
  }
}

.section1 {
  max-height: 100vh;
  overflow: hidden;
  position: relative;
  border-bottom: 1px solid #454E54;
  margin-bottom: 100px;

  .planeWaveContainer {
    #planeWave {
      height: 100vh;
      width: 100%;
      overflow: hidden;
      overflow-y: hidden;
      filter: grayscale(90%);
    }
  }
  // by doing this you're overlapping the content container to the threejs canvas
  .content {
    position: relative;
    top: -100vh;
    height: 100vh;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 40px;
    padding: 0 20px;

    .photo-container {
      .profile-picture {
        height: 200px;
        width: 200px;
        border-radius: 100px;
        -webkit-box-shadow: 0px 0px 46px 20px rgba(0, 0, 0, 0.589); 
        box-shadow: 0px 0px 46px 20px rgba(0, 0, 0, 0.589);
      }
    }
    .description {
      display: flex;
      flex-direction: column;
      text-align: center;
      gap: 10px;

    }
    .contact-button-container {
      .contact-button {
        border: 1px solid #fff;
        color: #fff;
        background: $transparent;
        padding: 10px 50px;
        cursor: pointer;
      }
    }

    // fix: there is not enough space for the photo on devices less tall than 400px
    @media (max-height: 400px) {
      .photo-container {
        display: none;
      }
    }
  }
}

.section2 {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 100px;
  padding: 100px 20px;

  .description {
    display: flex;
    flex-direction: column;
    gap: 10px;

    h2, p {
      text-align: center;
    }
  }

  .projects-container {
    overflow: hidden;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 10px;

    .project {
      overflow: hidden;

      img {
        max-width: 400px;
        width: 100%;
      }
    }

    @media (min-width: $xl) {
      flex-direction: row;
    }
  }
}

.section3 {
  .container {
    display: flex;
    flex-direction: column;
    padding: 100px 20px;
    justify-content: center;
    align-items: center;

    .flex1 {
      z-index: 2;
      max-width: 500px;
      display: flex;
      flex-direction: column;
      gap: 50px;

      .description {
        display: flex;
        flex-direction: column;
        gap: 15px;

        .technologies {
          display: flex;
          font-size: 1.2em;

          ul {
            list-style: inside;
          }
        }
      }
    }
    .flex2 {
      overflow: hidden;
      max-width: 100vw;
      #myCanvas {
        // width: 400px;
        // height: 400px;
        width: 100vw;
        height: 100vh;
        max-height: 100vw; // this is not an error. I want the height in vw so the canvas stays a square at all screen sizes.

        @media (min-width: $md) {
          height: 700px;
          width: 700px;
        }
      }
    }

    @media (min-width: $xl) {
      flex-direction: row;
    }

  }
}

.section4 {
  padding: 100px 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 30px;

  .description {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 15px;
    text-align: center;

    p {
      max-width: 600px;
    }
  }

  .form-container {
    #contact-form, .row {
      display: flex;
      flex-direction: column;
      gap: 10px;
      width: 90vw;
      max-width: 500px;

      .row {
        label { // makes the text not visible for normal users but it can be heard by screen readers
          position: absolute;
          color:rgba(0, 0, 0, 0);
        }
        
        input {
          height: 30px;
        }
        textarea {
          resize: vertical;
        }
        input, textarea {
          width: 100%;
          background: #2B2B2B;
          border: none;
          color: $text-white;
          padding: 10px;

          &::placeholder {
            color: $text-palceholder;
          }
        }
      }

      .submit {
        width: 100%;
        display: flex;
        justify-content: center;
        align-items: center;

        button {
          border: 1px solid #fff;
          color: #fff;
          background: $transparent;
          padding: 10px 0;
          width: 100%;
          max-width: 400px;
          cursor: pointer;
        }
      }

      @media (min-width: $xl) {

        .row {
          flex-direction: row;
          .col {
            width: 100%;
          }
        }

        max-width: 700px;

      }
    }

    .res {
      text-align: center;
      padding: 20px 0;
    }
    .hide {
      display: none;
    }
    .success {
      color: rgb(0, 128, 0);
    }
    .error {
      color: rgb(255, 0, 0);
    }
  }
}

footer {
  background: $background-dark;
  color: $text-gray;
  display: flex;
  justify-content: center;
  flex-direction: column;
  padding: 50px 20px;
  gap: 30px;

  @media (min-width: $sm) {
    flex-direction: row;
    gap: 20vw;
  }
  
  .section, .group {
    display: flex;
    flex-direction: column;
    gap: 10px;

    .group {
      gap: 5px;
    }

    ul {
      list-style: none;
    }
    a {
      text-decoration: none;
      color: $text-gray;
    }
  }
}

.copyright {
  display: flex;
  justify-content: center;
  background: $background-darker;
  color: $text-gray;
  padding: 5px 0;
}

